--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/zackshdw/nodejs-youtube-downloader#readme",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.90",
     "bgutils-js": "^3.2.0",
     "cli-progress": "^3.12.0",
     "googlevideo": "^4.0.4",
